fix(console): checkbox label should not wrap (#2728)

--- a/packages/console/src/pages/SignInExperience/tabs/SignUpAndSignIn/components/SignInMethodEditBox/index.module.scss
+++ b/packages/console/src/pages/SignInExperience/tabs/SignUpAndSignIn/components/SignInMethodEditBox/index.module.scss
@@ -46,7 +46,7 @@
     }
 
     .swapButton {
-      margin-right: _.unit(4);
+      margin: 0 _.unit(4);
     }
 
     &.verifyCodePrimary {
